[package]
name = "snmalloc-rs"
version = "0.2.24"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"
license = "MIT"
description = "rust bindings of snmalloc."
keywords = ["snmalloc", "allocator"]
categories = ["memory-management", "api-bindings"]
homepage = "https://github.com/microsoft/snmalloc"
repository = "https://github.com/SchrodingerZhu/snmalloc-rs"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["snmalloc-sys" ]

[dependencies]
snmalloc-sys = {version = "0.2.24", path = "snmalloc-sys"}

[features]
default = ["1mib"]
1mib = ["snmalloc-sys/1mib"]
16mib = ["snmalloc-sys/16mib"]
qemu = ["snmalloc-sys/qemu"]
stats = ["snmalloc-sys/stats"]
debug = ["snmalloc-sys/debug"]
cache-friendly = ["snmalloc-sys/cache-friendly"]
android-lld = ["snmalloc-sys/android-lld"]
android-shared-stl = ["snmalloc-sys/android-shared-stl"]
native-cpu = ["snmalloc-sys/native-cpu"]
