[package]
name = "snmalloc-rs"
version = "0.2.27"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"
license = "MIT"
description = "rust bindings of snmalloc."
keywords = ["snmalloc", "allocator"]
categories = ["memory-management", "api-bindings"]
homepage = "https://github.com/microsoft/snmalloc"
repository = "https://github.com/SchrodingerZhu/snmalloc-rs"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["snmalloc-sys" ]

[dependencies]
snmalloc-sys = {version = "0.2.27", path = "snmalloc-sys", default-features = false }

[features]
default = ["snmalloc-sys/build_cmake","1mib"]
build_cc = ["snmalloc-sys/build_cc","1mib"]
1mib = ["snmalloc-sys/1mib"]
16mib = ["snmalloc-sys/16mib"]
qemu = ["snmalloc-sys/qemu"]
stats = ["snmalloc-sys/stats"]
debug = ["snmalloc-sys/debug"]
cache-friendly = ["snmalloc-sys/cache-friendly"]
android-lld = ["snmalloc-sys/android-lld"]
android-shared-stl = ["snmalloc-sys/android-shared-stl"]
native-cpu = ["snmalloc-sys/native-cpu"]
local_dynamic_tls = ["snmalloc-sys/local_dynamic_tls"]
win8compat = ["snmalloc-sys/win8compat"]
usecxx20 = ["snmalloc-sys/usecxx20"]
